@@ -4,12 +4,12 @@ use 5.020;
 use Moose;
 use experimental qw/signatures/;
 
-with 'Dist::Zilla::Role::PrereqSource', 'Dist::Zilla::Role::DynamicPrereqs::Meta', 'Dist::Zilla::Role::FileGatherer';
+with 'Dist::Zilla::Role::PrereqSource', 'Dist::Zilla::Role::FileGatherer', 'Dist::Zilla::Role::DynamicPrereqs::Meta';
 
 sub register_prereqs($self) {
 	$self->zilla->register_prereqs({ phase => 'configure' }, 'Dist::Build::DynamicPrereqs' => '0.019');
 	return;
-};
+}
 
 my $content = <<EOF;
 load_extension('Dist::Build::DynamicPrereqs', 0.019);
@@ -23,8 +23,10 @@ sub gather_files($self) {
 		content => $content,
 	});
 
+	$self->add_file($file);
+
 	return;
-};
+}
 
 1;
 
